--- a/assets/css/program.css
+++ b/assets/css/program.css
@@ -20,7 +20,7 @@
 .program .section-header{
   max-width: 980px;
   margin: 0 auto 18px;
-  text-align: left;
+  text-align: center;
 }
 
 .program .section-header h2{
